@@ -477,18 +477,6 @@ along with systemd; If not, see <http://www.gnu.org/licenses/>.
       </varlistentry>
 
       <varlistentry>
-        <term><option>-n</option></term>
-        <term><option>--lines=</option></term>
-
-        <listitem>
-          <para>When used with <command>status</command>, controls the
-          number of journal lines to show, counting from the most
-          recent ones. Takes a positive integer argument. Defaults to
-          10.</para>
-        </listitem>
-      </varlistentry>
-
-      <varlistentry>
         <term><option>--plain</option></term>
 
         <listitem>
