@@ -40,6 +40,7 @@ systemd System and Service Manager
     - remove output argument option;
     - don't show unit logs;
     - remove libsystemd-logs library;
+    - remove lines argument option;
  * remove libsystemd-logs library;
  * remove bootchart support;
  * unit:
